Add all events and init properties for MapView, update sample app

--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,1 +1,3 @@
-<arcng-map class="map" (mapReady)="onMapReady()" [zoom]="5"></arcng-map>
+<arcng-map class="map" baseMap="streets-navigation-vector"
+           [zoom]="10" [center]="[-83.4255176, 42.432238]"
+           (mapReady)="onMapReady()" (mapClick)="onMapClick($event)"></arcng-map>
