--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,6 +1,3 @@
-<arcng-map class="map" baseMap="streets-navigation-vector"
-           [zoom]="10" [center]="[-83.4255176, 42.432238]"
-           (mapReady)="onMapReady()" (mapClick)="onMapClick($event)"
-           (mapHoldHit)="onMapHit($event)">
-
+<arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (mapReady)="onMapReady()">
+  <arcng-basemap-gallery position="top-right"></arcng-basemap-gallery>
 </arcng-map>
