Added Simple Feature Layer and sample

--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -2,4 +2,5 @@
   <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Basemap Gallery">
     <arcng-basemap-gallery></arcng-basemap-gallery>
   </arcng-expand>
+  <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/arcgis/rest/services/US_counties_employment_2016/FeatureServer/0"></arcng-feature-layer>
 </arcng-map>
