--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,10 +1,14 @@
 <arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (mapReady)="onMapReady()">
-  <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Basemap Gallery" [index]="0">
+  <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Basemap Gallery" [index]="0" group="top-right">
     <arcng-basemap-gallery></arcng-basemap-gallery>
   </arcng-expand>
-  <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Layer List">
+  <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Layer List" [iconNumber]="2" group="top-right">
     <arcng-layer-list></arcng-layer-list>
   </arcng-expand>
-  <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/USA_Counties/FeatureServer/0"></arcng-feature-layer>
-  <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0"></arcng-feature-layer>
+  <arcng-group-layer title="Public Layers">
+    <arcng-group-layer title="Tornadoes">
+      <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0"></arcng-feature-layer>
+    </arcng-group-layer>
+    <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/USA_Counties/FeatureServer/0"></arcng-feature-layer>
+  </arcng-group-layer>
 </arcng-map>
