Converted Feature Layer to component and added more properties

--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -7,7 +7,7 @@
   </arcng-expand>
   <arcng-group-layer title="Public Layers">
     <arcng-group-layer title="Tornadoes">
-      <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0"></arcng-feature-layer>
+      <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0" [visible]="false"></arcng-feature-layer>
     </arcng-group-layer>
     <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/USA_Counties/FeatureServer/0"></arcng-feature-layer>
   </arcng-group-layer>
