--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,16 +1,21 @@
 <arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (mapReady)="onMapReady()">
-  <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Basemap Gallery" [index]="0" group="top-right">
-    <arcng-basemap-gallery></arcng-basemap-gallery>
-  </arcng-expand>
-  <arcng-expand [position]="uiPositions.TopRight" expandTooltip="Expand Layer List" [iconNumber]="2" group="top-right">
-    <arcng-layer-list></arcng-layer-list>
-  </arcng-expand>
-  <arcng-group-layer title="Public Layers">
-    <arcng-group-layer title="Tornadoes">
-      <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0">
-        <arcng-label-class expression="$feature.STATUS"></arcng-label-class>
-      </arcng-feature-layer>
-    </arcng-group-layer>
-    <arcng-feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/USA_Counties/FeatureServer/0" [visible]="false"></arcng-feature-layer>
-  </arcng-group-layer>
+  <expand-widget [position]="uiPositions.TopRight" expandTooltip="Expand Basemap Gallery" [index]="0" group="top-right">
+    <basemap-gallery></basemap-gallery>
+  </expand-widget>
+  <expand-widget [position]="uiPositions.TopRight" expandTooltip="Expand Layer List" [iconNumber]="2" group="top-right">
+    <layer-list></layer-list>
+  </expand-widget>
+  <group-layer title="Public Layers">
+    <group-layer title="Tornadoes">
+      <feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0">
+        <label-class expression="$feature.STATUS" where="STATUS = 'NEW'">
+          <text-symbol color="red" haloColor="black" haloSize="1px" [fontSize]="12"></text-symbol>
+        </label-class>
+        <label-class expression="$feature.STATUS" where="STATUS <> 'NEW'">
+          <text-symbol color="green" haloColor="black" haloSize="1px" [fontSize]="12"></text-symbol>
+        </label-class>
+      </feature-layer>
+    </group-layer>
+    <feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/USA_Counties/FeatureServer/0" [visible]="false"></feature-layer>
+  </group-layer>
 </arcng-map>
