--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,10 +1,10 @@
-<arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (mapReady)="onMapReady()">
-  <expand-widget [position]="uiPositions.TopRight" expandTooltip="Expand Basemap Gallery" [index]="0" group="top-right">
-    <basemap-gallery></basemap-gallery>
-  </expand-widget>
-  <expand-widget [position]="uiPositions.TopRight" expandTooltip="Expand Layer List" [iconNumber]="2" group="top-right">
-    <layer-list></layer-list>
-  </expand-widget>
+<arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (viewReady)="onMapReady()">
+
+  <basemap-gallery arcngExpand expandTooltip="Expand Basemap Gallery" expandGroup="top-right"
+                   [uiPosition]="uiPositions.TopRight" [uiIndex]="0"></basemap-gallery>
+  <layer-list arcngExpand expandTooltip="Expand Layer List" expandGroup="top-right"
+              [uiPosition]="uiPositions.TopRight" [iconNumber]="2"></layer-list>
+
   <group-layer title="Public Layers">
     <group-layer title="Tornadoes">
       <feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0">
