--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,17 +1,14 @@
-<arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (viewReady)="onMapReady()">
+<arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (viewReady)="onMapReady($event)">
 
   <basemap-gallery arcngExpand expandTooltip="Expand Basemap Gallery" expandGroup="top-right"
-                   [uiPosition]="uiPositions.TopRight" [uiIndex]="0" *ngIf="showBasemapGallery"></basemap-gallery>
+                   [uiPosition]="uiPositions.TopRight" *ngIf="showBasemapGallery"></basemap-gallery>
   <layer-list arcngExpand expandTooltip="Expand Layer List" expandGroup="top-right"
               [uiPosition]="uiPositions.TopRight" [iconNumber]="2"></layer-list>
 
   <group-layer title="Public Layers">
     <group-layer title="Tornadoes">
       <feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0">
-        <label-class expression="$feature.STATUS" where="STATUS = 'NEW'">
-          <text-symbol color="red" haloColor="white" haloSize="1px" [fontSize]="12"></text-symbol>
-        </label-class>
-        <label-class expression="$feature.STATUS" where="STATUS <> 'NEW'">
+        <label-class expression="$feature.STATUS">
           <text-symbol [color]="[11, 127, 52, 1]" [haloColor]="[255, 255, 255, 0.75]" haloSize="1px" [fontSize]="12"></text-symbol>
         </label-class>
         <action (click)="onActionClick(1)" [className]="icons.BlankMapPin" title="Remove Basemap Gallery"></action>
