--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,7 +1,11 @@
-<arcng-map class="map" baseMap="streets-navigation-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]" (viewReady)="onMapReady($event)">
+<arcng-map class="map" baseMap="streets-vector" [zoom]="10" [center]="[-83.4255176, 42.432238]"
+           (viewReady)="onMapReady($event)" [constraints]="{ snapToZoom: false }">
 
-  <basemap-gallery arcngExpand expandTooltip="Expand Basemap Gallery" expandGroup="top-right" [uiPosition]="uiPositions.TopRight"></basemap-gallery>
-  <layer-list arcngExpand expandTooltip="Expand Layer List" expandGroup="top-right" [uiPosition]="uiPositions.TopRight"></layer-list>
+  <basemap-gallery arcngExpand expandTooltip="Expand Basemap Gallery" expandGroup="top-right" [uiPosition]="uiPositions.TopRight"
+                   Basemaps="streets-vector, streets-navigation-vector, streets-relief-vector, gray-vector, streets-night-vector, dark-gray-vector, topo-vector"
+  ></basemap-gallery>
+  <layer-list arcngExpand expandTooltip="Expand Layer List" expandGroup="top-right"
+              [uiPosition]="uiPositions.TopRight"></layer-list>
 
   <group-layer title="Disasters">
     <feature-layer url="https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/Tornado_Warnings/FeatureServer/0">
